<resources>
    <string name="app_name">calc1</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="addition">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="subtraction">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplication">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="division">/</string>
    <string name="clear">c</string>
    <string name="backspace">⌫</string>
    <string name="todo">TODO</string>
    <string name="MyGreen">MyGreen</string>
    <string name="light_theme">light_theme</string>
    <string name="red_theme">red_theme</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme">сменить тему</string>
</resources>