<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyGreen"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPoint"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEqually"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEqually"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equally"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddition"
        app:layout_constraintStart_toEndOf="@+id/btnPoint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEqually" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btnPoint"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btnEqually"
        app:layout_constraintEnd_toStartOf="@+id/btnSubtraction"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubtraction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btnAddition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplication"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMultiplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btnSubtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDivision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnСlear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="@+id/btn1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        android:textSize="@dimen/batton_size"
        app:layout_constraintBottom_toTopOf="@+id/btnDivision"
        app:layout_constraintEnd_toEndOf="@+id/btnDivision"
        app:layout_constraintStart_toStartOf="@+id/btn3" />


</androidx.constraintlayout.widget.ConstraintLayout>