<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="SettingsActivity">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MyGreen" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_red_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_theme" />

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>